--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,29 +5,32 @@ homepage: https://github.com/huangruiLearn
 platforms:
   android:
   ios:
+#  sdk: ">=2.17.0 <4.0.0"
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
-  flutter: ">=3.0.0 <4.0.0"
+  sdk: '>=3.4.1 <4.0.0'
+#  flutter: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   #https://github.com/flutter/plugins/tree/main/packages/shared_preferences/shared_preferences
-  shared_preferences: ^2.0.15
+  shared_preferences: ^2.2.3
   #https://github.com/rrousselGit/riverpod
   provider: ^6.0.3
   cupertino_icons: ^1.0.5
   #https://github.com/luanpotter/audioplayers
   audioplayers: ^1.0.1
   #https://github.com/flutterchina/dio
-  dio: ^4.0.6
+#  dio: ^4.0.6
+  dio: ^5.4.3+1
+
   #https://github.com/google/json_serializable.dart/tree/master/json_serializable
   json_annotation: ^4.4.0
   #https://github.com/best-flutter/flutter_swiper
   card_swiper : ^2.0.4
   #https://github.com/best-flutter/flutter_page_indicator
-  flutter_page_indicator: ^0.0.3
+#  flutter_page_indicator: ^0.0.3
   #https://github.com/flutter/plugins/tree/master/packages/video_player
   video_player: ^2.4.7
   # https://github:com/brianegan/chewie
@@ -37,15 +40,26 @@ dependencies:
   #https://github.com/flutterchina/lpinyin
   lpinyin: ^2.0.2
   # https://github:com/fluttercandies/extended_text_field:
-  extended_text_field: ^10.1.1
-  url_launcher: 5.3.0
+#  extended_text_field: ^10.1.1
+  extended_text_field: ^15.0.0
+
+  #  url_launcher: 5.3.0
+  url_launcher: ^6.3.0
   # https://github: com/fluttercandies/extended_nested_scroll_view:
-  extended_nested_scroll_view: ^5.1.3
+#  extended_nested_scroll_view: ^5.1.3
+  extended_nested_scroll_view: ^6.2.1
+
   #https://github.com/Daegalus/dart-uuid
   uuid: 3.0.1
-  flutter_screenutil: ^0.5.2
+#  flutter_screenutil: ^0.5.2
+  flutter_screenutil: ^5.9.3
+
   fluttertoast: ^8.0.9
-  synchronized: ^2.1.0
+#  synchronized: ^2.1.0
+  synchronized: ^3.1.0+1
+
+  wakelock_web: ^0.4.0
+
   event_bus: ^2.0.0
   # https://github.com/theyakka/fluro
   fluro: ^2.0.3
@@ -61,14 +75,19 @@ dependencies:
       url: https://github.com/huangruiLearn/flutter_record_plugin.git
       ref: c8dfed9c235174b223b1ab9dcaeb894bfaadabad
 
-dependency_overrides:
-  platform: ^3.1.0
+#  build_runner: ^2.0.0
+#  json_serializable: ^6.3.1
+  build_runner: ^2.4.11
+  json_serializable: ^6.8.0
+
+
+#dependency_overrides:
+#  platform: ^3.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.0.0
-  json_serializable: ^6.3.1
+
 
 flutter:
   uses-material-design: true
